# py_1bi_linea

./: .gitignore  README.md  create_measurements.py  etl_duckdb.py  etl_pandas.py  etl_python.py  pyproject.toml
dashboard/: dashboard_carga_correcta.py  dashboard_carga_erronea.py
data/: measurements_summary.parquet
pipeline_duckdb/: using_duckdb_to_save_parquet.py
